src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@layer base {
  @font-face {
    font-family: 'Clover';
    font-style: normal;
    src: url(/fonts/CloverDisplay-Regular.woff) format('woff');
  }

  @font-face {
    font-family: 'Poppins';
    font-style: normal;
    src: url(/fonts/Poppins-Regular.woff) format('woff');
  }


}
:root{
  --plyr-color-main: #f96f2e;
  --primary : #f96f2e;
  --color-brand : 249,111,46;
  --color-background : 255, 255, 255;
  --color-text :  24, 24, 24;
  --color-secondary-1 : 249, 212, 46;
  --color-secondary-2 : 55, 0, 117;
  --color-secondary-3 : 98, 0, 151;
  --color-grey: 244, 244, 245;
  --color-grey-2: 63, 63, 70;
  --color-grey-3: 244, 247, 249;
  --color-grey-4: 16, 16, 16;
  --color-accent : 249, 212, 46;
  --color-yellow : 249, 212, 46;
  --color-purple :  55, 0, 117;
 
}

@keyframes float {
  0% {
    transform: translateY(0px);
  }
  50% {
    transform: translateY(-10px);
  }
  100% {
    transform: translateY(0px);
  }
}

.animate-float {
  animation: float 3s ease-in-out infinite;
}



[data-theme="dark"] {
  --color-brand : 249,111,46;
  --color-background : 24, 24, 24;
  --color-text :  255, 255, 255;
  --color-secondary-1 : 55, 0, 117;
  --color-secondary-2 : 249, 212, 46;
  --color-secondary-3 : 98, 0, 151;
  --color-grey-2: 244, 244, 245;
  --color-grey: 63, 63, 70;
  --color-grey-4: 244, 247, 249;
  --color-grey-3: 16, 16, 16;
  --color-accent : 255, 255, 255;
  --color-yellow : 249, 212, 46;
  --color-purple :  55, 0, 117;
}

.black-text{
  color : rgba(var(--color-text)) !important;
}
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active{
    -webkit-background-clip: text;
    -webkit-text-fill-color: rgba(var(--color-text));
    /* transition: background-color 5000s ease-in-out 0s;/ */
    /* box-shadow: inset 0 0 20px 20px #23232329; */
}

/* Add this to your global CSS file */



.rotate-x-180{
  transform: rotateX(180deg);
}

.clip{
  clip-path: circle(50% at 0 0);
}

.stroke-text{
  -webkit-text-stroke: 0.5px rgba(var(--color-secondary-2));
}
  .door {
    transform-origin: left;
    transition: transform 0.5s ease-in-out;
    background: linear-gradient(145deg, #6b4f4f, #8d6e63);
    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
 
    transition: transform 0.5s ease-in-out;
  }
  
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }
  
  .no-scrollbar {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
  }

/* .video-js{
  width: 80vw !important;
  height: auto !important;
  max-width: 1020px;
  margin: 0;
  padding: 0;
}

.vjs-default-skin{
  border-radius: 24px !important;
} */

.video-js.vjs-ended .vjs-poster {
  display: block;
}

.video-js .vjs-big-play-button {
  background-color: rgba(var(--color-background)) !important;
  color: rgba(var(--color-brand))!important;
}
.video-js .vjs-big-play-button:hover{
  color: rgba(var(--color-brand))!important;
  background-color: rgba(var(--color-background)) !important;

} 


.no-rotate {
  transform: none !important;
  transition: none !important;
}

  /* .doorOpen {
    transform: perspective(1200px) rotateY(-105deg);
  }
  
  .light-ray {
    transition: opacity 0.5s ease-in-out;
  }
  
  .doorOpen ~ .light-ray {
    opacity: 1;
  }
   */


  .doorSlightlyOpen {
    transform: perspective(1200px) rotateY(-20deg);
  }
  
  .doorOpen {
    transform: perspective(1200px) rotateY(-105deg);
  }
  
  .doorClosed {
    transform: perspective(1200px) rotateY(0deg);
  }
  
  .light-ray {
    transition: opacity 0.5s ease-in-out;
  }
  
  .glowing-error {
    color: #ff6b6b;
    text-shadow: 0 0 8px rgba(255, 107, 107, 0.7), 0 0 16px rgba(255, 107, 107, 0.7);
  }
  
  .welcome-message {
    color: #ffffff;
    text-shadow: 0 0 12px rgba(255, 255, 255, 0.9), 0 0 24px rgba(255, 255, 255, 0.9);
  }
  



  .audio-player-card {
    max-width: 900px;
    border-radius: 24px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  
  }
  
  .thumbnail-container {
    width: 100%;
    display: flex;
    justify-content: center;
    margin-bottom: 20px;
  }

  .rhap_container {
    border: none !important;
    box-shadow: none !important;
    background-color: rgba(var(--color-grey-1)) !important;
  }
  
 
  
  .rhap_loop-button {
    display: none !important;
  }
  
  .rhap_main-controls {
    display: flex;
    justify-content: center;
    align-items: center;
    width: calc(100% - 50px); /* Adjust the width to leave space for the volume button */
  }
  
  .rhap_volume-container {
    position: absolute;
    right: 10px;
    top: 50%;
    transform: translateY(-50%);
    display: flex;
    align-items: center;
  }
  
  .rhap_volume-bar {
    display: none;
  }
  
  .rhap_volume-button {
    margin-right: 0 !important;
    display: none !important;
  }
  .rhap_progress-bar {
    margin-bottom: 15px !important; /* Adjust this value to add more space between slider and controls */
  }
  
.rhap_time{
   color : rgba(var(--color-grey-1)) !important;
}

  .rhap_controls {
    margin-bottom: 0px !important; /* Adjust this value to reduce the space below the controls */
  }

